toggle banner by existance of banner data

--- a/sw-installed.html
+++ b/sw-installed.html
@@ -120,7 +120,7 @@
         </div>
 
         <!-- 오른쪽: 팝업 정보 배너 예시값들 -->
-        <aside class="ad-player-banner">
+        <aside id="banner" class="ad-player-banner">
           <div class="ad-banner-inner">
 
 
