Feature/banner cache (#3)
* banner caching

* banner qr changing

* toggle banner by existance of banner data

* modify logging

---------

Co-authored-by: 김민 <minkim@spacebank.co.kr>

--- a/sw-installed.html
+++ b/sw-installed.html
@@ -120,7 +120,7 @@
         </div>
 
         <!-- 오른쪽: 팝업 정보 배너 예시값들 -->
-        <aside class="ad-player-banner">
+        <aside id="banner" class="ad-player-banner">
           <div class="ad-banner-inner">
 
 
@@ -216,16 +216,13 @@
         </nav>
       </footer>
     </div>
+
     <script src="js/db.js"></script>
     <script src="js/app.js"></script>
     <script src="js/api.js"></script>
     <script src="js/ws.js"></script>
+    <script src="js/banner.js"></script>
     <script src="js/player.js"></script>
     <script src="js/ui.js"></script>
-    
-
-    <script src="js/banner.js"></script>
-
-
   </body>
 </html>
