--- a/sw-installed.html
+++ b/sw-installed.html
@@ -110,7 +110,6 @@
     </div>
 
     <!-- Modal player -->
-    <!-- Modal player -->
     <div id="modal-player" class="mobile-hidden">
       <div class="ad-player-layout">
         <!-- 왼쪽: 비디오 영역 -->
@@ -126,6 +125,7 @@
           <div class="ad-banner-inner">
 
 
+
             <!-- EN_POPUP_NAME -->
 
             <div id="banner-subtitle" class="ad-banner-subtitle">
@@ -133,19 +133,27 @@
               EXCLUSIVE SNEAKER DROP
             </div>
 
-            <!-- POPUP_NAME -->
 
+            <!-- POPUP_NAME -->
+    <div class="ad-banner-main">
+
+<div class="ad-banner-heading">
             <h2 id="banner-title" class="ad-banner-title">
               스니커즈 리미티드 드롭
             </h2>
-
+                                <div class="ad-banner-tags">
+          <span class="ad-banner-tag">패션</span>
+          <span class="ad-banner-tag">주얼리</span>
+          <span class="ad-banner-tag">뷰티</span>
+          <span class="ad-banner-tag">연예</span>
+          <span class="ad-banner-tag">캐릭터</span>
+        </div>
+</div>
             <!-- PROMOTION -->
-
             <p id="banner-promotion" class="ad-banner-desc">
               한국 최초 공개되는 리미티드 에디션 스니커즈. 
               선착순 구매 기회를 놓치지 마세요!
             </p>
-
             <!-- LOCATION / PERIOD / OPEN_TIME -->
             <div class="ad-banner-meta">
               <div class="ad-banner-meta-row">
@@ -184,6 +192,9 @@
                 </div>
               </div>
             </div>
+
+          </div>
+
 
             <!-- QR -->
             <div class="ad-banner-qr">
