Show an error message when loading fails

--- a/sw-installed.html
+++ b/sw-installed.html
@@ -102,7 +102,6 @@
         <div class="ad-banner-inner">
 
 
-
           <!-- EN_POPUP_NAME -->
 
           <div id="banner-subtitle" class="ad-banner-subtitle">
@@ -113,9 +112,11 @@
           <!-- POPUP_NAME -->
           <div class="ad-banner-main">
 
+            
             <div class="ad-banner-heading">
               <h2 id="banner-title" class="ad-banner-title">
-
+                로딩에 실패했습니다.
+                초기화 후 다시 시도해주세요.
               </h2>
               <div class="ad-banner-tags" id="banner-tags">
                 <!-- JS에서 태그 span들을 채워 넣음 -->
